--- a/app/src/main/res/layout/activity_word_detail.xml
+++ b/app/src/main/res/layout/activity_word_detail.xml
@@ -9,8 +9,9 @@
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:padding="20dp"
+        android:layout_margin="10dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="10dp"
         android:src="@drawable/ic_left_arrow" />
 
     <LinearLayout
@@ -40,18 +41,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignEnd="@+id/iv_image"
-                    android:background="@android:color/transparent"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_volume_up" />
             </RelativeLayout>
         </LinearLayout>
 
         <TextView
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/jsdongkang_regular"
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/jsdongkang_regular"
             android:textColor="@android:color/black"
             android:textSize="52sp" />
 
@@ -81,7 +82,7 @@
                         android:id="@+id/btn_black"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
+                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="5dp"
                         android:src="@drawable/ic_pencil_black" />
 
@@ -89,7 +90,7 @@
                         android:id="@+id/btn_red"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
+                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="5dp"
                         android:src="@drawable/ic_pencil_red" />
 
@@ -97,7 +98,7 @@
                         android:id="@+id/btn_blue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
+                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="5dp"
                         android:src="@drawable/ic_pencil_blue" />
 
@@ -110,7 +111,7 @@
                             android:id="@+id/btn_eraser"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@android:color/transparent"
+                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:padding="5dp"
                             android:src="@drawable/ic_erase" />
                     </LinearLayout>
