--- a/app/src/main/res/layout/fragment_more_button.xml
+++ b/app/src/main/res/layout/fragment_more_button.xml
@@ -10,18 +10,19 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:padding="20dp"
             android:src="@drawable/ic_pencil_gray" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
+            android:fontFamily="@font/jsdongkang_regular"
             android:paddingStart="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
             android:text="수정"
             android:textColor="@color/darkGray"
             android:textSize="18sp" />
@@ -33,15 +34,16 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:padding="20dp"
             android:src="@drawable/ic_delete" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/jsdongkang_regular"
             android:paddingStart="10dp"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
