--- a/app/src/main/res/layout/fragment_my_word_list.xml
+++ b/app/src/main/res/layout/fragment_my_word_list.xml
@@ -9,8 +9,9 @@
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:padding="20dp"
+        android:layout_margin="10dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="10dp"
         android:src="@drawable/ic_left_arrow" />
 
     <LinearLayout
