--- a/app/src/main/res/layout/item_my_word.xml
+++ b/app/src/main/res/layout/item_my_word.xml
@@ -71,7 +71,7 @@
                             android:id="@+id/btn_more"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@android:color/transparent"
+                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:padding="10dp"
                             android:src="@drawable/ic_more_black" />
                     </LinearLayout>
