--- a/app/src/main/res/layout/activity_word_detail.xml
+++ b/app/src/main/res/layout/activity_word_detail.xml
@@ -38,6 +38,7 @@
                     android:padding="10dp" />
 
                 <ImageButton
+                    android:id="@+id/btn_sound"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignEnd="@+id/iv_image"
