--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.intro.MainActivity">
+    tools:context=".view.intro.HomeActivity">
 
     <FrameLayout
         android:id="@+id/main_fragment"
