--- a/app/src/main/res/layout/activity_word_detail.xml
+++ b/app/src/main/res/layout/activity_word_detail.xml
@@ -21,41 +21,43 @@
         android:weightSum="10">
 
         <LinearLayout
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/iv_image"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/iv_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:padding="10dp" />
-
-                <ImageButton
-                    android:id="@+id/btn_sound"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/iv_image"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_volume_up" />
-            </RelativeLayout>
+                android:adjustViewBounds="true"
+                android:padding="10dp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/jsdongkang_regular"
-            android:textColor="@android:color/black"
-            android:textSize="52sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:fontFamily="@font/jsdongkang_regular"
+                android:textColor="@android:color/black"
+                android:textSize="52sp" />
+
+            <ImageButton
+                android:id="@+id/btn_sound"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@+id/tv_name"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_volume_up" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
