--- a/app/src/main/res/layout/activity_word_list.xml
+++ b/app/src/main/res/layout/activity_word_list.xml
@@ -5,18 +5,31 @@
     android:background="@drawable/main_image"
     android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/btn_back"
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="10dp"
+        android:src="@drawable/ic_left_arrow" />
+
+    <LinearLayout
+        android:id="@+id/layout_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <ProgressBar
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:padding="10dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_left_arrow" />
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/layout_word_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_word_list"
