--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:layout_weight="2"
         android:fontFamily="@font/jsdongkang_regular"
         android:gravity="center"
-        android:text="@string/dodamdodam"
+        android:text="@string/app_name"
         android:textColor="@android:color/black"
         android:textSize="50sp"
         android:textFontWeight="500"/>
