Add layout ripple effect

--- a/app/src/main/res/layout/fragment_theme.xml
+++ b/app/src/main/res/layout/fragment_theme.xml
@@ -5,14 +5,13 @@
     android:background="@drawable/main_image"
     android:orientation="vertical">
 
-
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="10dp"
+        android:padding="5dp"
         android:src="@drawable/ic_left_arrow" />
 
     <LinearLayout
@@ -29,24 +28,24 @@
             android:weightSum="5">
 
             <LinearLayout
+                android:id="@+id/btn_fruit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:background="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageButton
-                    android:id="@+id/btn_fruit"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
                     android:padding="10dp"
                     android:src="@drawable/ic_fruit" />
 
-                <Button
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/jsdongkang_regular"
                     android:text="@string/fruit_shop"
                     android:textColor="@android:color/black"
@@ -54,24 +53,24 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/btn_playground"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:background="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageButton
-                    android:id="@+id/btn_playground"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
                     android:padding="10dp"
                     android:src="@drawable/ic_playground" />
 
-                <Button
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/jsdongkang_regular"
                     android:text="@string/playground"
                     android:textColor="@android:color/black"
@@ -87,24 +86,24 @@
             android:weightSum="5">
 
             <LinearLayout
+                android:id="@+id/btn_zoo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:background="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageButton
-                    android:id="@+id/btn_zoo"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
                     android:padding="10dp"
                     android:src="@drawable/ic_zoo" />
 
-                <Button
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/jsdongkang_regular"
                     android:text="@string/zoo"
                     android:textColor="@android:color/black"
@@ -112,24 +111,24 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/btn_restaurant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:background="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageButton
-                    android:id="@+id/btn_restaurant"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
                     android:padding="10dp"
                     android:src="@drawable/ic_restaurant" />
 
-                <Button
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/jsdongkang_regular"
                     android:text="@string/restaurant"
                     android:textColor="@android:color/black"
@@ -145,24 +144,24 @@
             android:weightSum="5">
 
             <LinearLayout
+                android:id="@+id/btn_toy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:background="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageButton
-                    android:id="@+id/btn_toy"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
                     android:padding="10dp"
                     android:src="@drawable/ic_toy" />
 
-                <Button
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/jsdongkang_regular"
                     android:text="@string/toy_shop"
                     android:textColor="@android:color/black"
@@ -170,24 +169,24 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/btn_home"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:background="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageButton
-                    android:id="@+id/btn_home"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
                     android:padding="10dp"
                     android:src="@drawable/ic_home" />
 
-                <Button
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/jsdongkang_regular"
                     android:text="@string/home"
                     android:textColor="@android:color/black"
