--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="10dp"
+        android:padding="5dp"
         android:src="@drawable/ic_left_arrow" />
 
     <LinearLayout
@@ -22,18 +22,18 @@
         android:weightSum="3">
 
         <LinearLayout
+            android:id="@+id/btn_hangul"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/btn_hangul"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_hangul" />
 
             <TextView
@@ -46,18 +46,18 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/btn_english"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/btn_english"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_english" />
 
             <TextView
